<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".produtoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qual_setor"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spSetores"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_produto"
            android:textAlignment="center"
            android:id="@+id/ed_descr"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_do_produto"
            android:textAlignment="center"
            android:id="@+id/ed_valor"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lista_produtos"/>
        
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="40sp"
                android:backgroundTint="@color/red"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/excluir"
                android:onClick="excluirProduto"/>

        </LinearLayout>

        <Button
            android:layout_width="0sp"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="5sp"
            android:text="+"
            android:textSize="60sp"
            android:gravity="bottom"
            android:onClick="inserirProduto"/>
    </LinearLayout>
    
</LinearLayout>