<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="5sp"
            android:layout_marginLeft="5sp"
            android:text="@string/cadastrar_setor"
            android:textSize="17sp"
            android:onClick="cadastrarSetor"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="5sp"
            android:layout_marginLeft="5sp"
            android:text="@string/cadastrar_produto"
            android:textSize="17sp"
            android:onClick="cadastrarProduto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5sp"
                android:text="@string/excluir_lista"
                android:backgroundTint="@color/red"
                android:textSize="20sp"
                android:onClick="excluirLista"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5sp"
                android:text="@string/editar_lista"
                android:textSize="20sp"
                android:onClick="editarLista"/>
        </LinearLayout>

        <Button
            android:layout_width="0sp"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="5sp"
            android:text="+"
            android:textSize="60sp"
            android:gravity="bottom"
            android:onClick="listaCompra"/>

    </LinearLayout>

</LinearLayout>